Add ES and DE versions

--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>TradingView + eToro : alertes 2025, templates prêts à l’emploi</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Guide 2025 : configurer TradingView pour suivre vos positions eToro. Alertes multi-actifs, templates prêts à cloner, gestion des risques et bonnes pratiques.">
-  <meta name="robots" content="index,follow">
-  <link rel="icon" type="image/png" href="/images/favicon.png">
-  <link rel="canonical" href="https://avis-invest.com/blog-2/">
-  <link rel="alternate" href="https://avis-invest.com/blog-2/" hreflang="fr">
-  <link rel="alternate" href="https://avis-invest.com/en/blog-2/" hreflang="en">
-  <link rel="alternate" href="https://avis-invest.com/blog-2/" hreflang="x-default">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="https://avis-invest.com/blog-2/">
-  <meta property="og:title" content="TradingView + eToro : alertes 2025, templates prêts à l’emploi">
-  <meta property="og:description" content="Configurer TradingView pour suivre vos positions eToro : alertes, templates et bonnes pratiques.">
-  <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
-  <meta property="og:image:width" content="800">
-  <meta property="og:image:height" content="400">
-  <meta property="og:locale" content="fr_FR">
-  <meta property="og:locale:alternate" content="en_US">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="TradingView + eToro : alertes 2025, templates prêts à l’emploi">
-  <meta name="twitter:description" content="Alertes TradingView pour eToro : templates prêts, gestion du risque, bonnes pratiques.">
-  <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
-
-  <!-- Styles -->
-  <link rel="preload" href="/style.min.css" as="style">
-  <link rel="stylesheet" href="/style.min.css">
-
-  <script>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>TradingView + eToro : alertes 2025, templates prêts à…</title>
+<meta name="description" content="Guide 2025 : configurer TradingView pour suivre vos positions eToro. Alertes multi-actifs, templates prêts à cloner, gestion des risques et bonnes pratiques."/>
+<meta name="robots" content="index,follow"/>
+<link href="/images/favicon.png" rel="icon" type="image/png"/>
+<link rel="canonical" href="https://avis-invest.com/blog-2/"/>
+<link href="https://avis-invest.com/blog-2/" hreflang="fr" rel="alternate"/>
+<link href="https://avis-invest.com/en/blog-2/" hreflang="en" rel="alternate"/>
+<link href="https://avis-invest.com/blog-2/" hreflang="x-default" rel="alternate"/>
+<link href="https://avis-invest.com/es/blog-2/" hreflang="es" rel="alternate"/>
+<link href="https://avis-invest.com/de/blog-2/" hreflang="de" rel="alternate"/>
+<!-- Open Graph -->
+<meta property="og:type" content="article"/>
+<meta property="og:url" content="https://avis-invest.com/blog-2/"/>
+<meta property="og:title" content="TradingView + eToro : alertes 2025, templates prêts à…"/>
+<meta property="og:description" content="Guide 2025 : configurer TradingView pour suivre vos positions eToro. Alertes multi-actifs, templates prêts à cloner, gestion des risques et bonnes pratiques."/>
+<meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png"/>
+<meta property="og:image:width" content="800"/>
+<meta property="og:image:height" content="400"/>
+<meta property="og:locale" content="fr_FR"/>
+<meta property="og:locale:alternate" content="en_US"/>
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="TradingView + eToro : alertes 2025, templates prêts à…"/>
+<meta name="twitter:description" content="Guide 2025 : configurer TradingView pour suivre vos positions eToro. Alertes multi-actifs, templates prêts à cloner, gestion des risques et bonnes pratiques."/>
+<meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png"/>
+<!-- Styles -->
+<link as="style" href="/style.min.css" rel="preload"/>
+<link href="/style.min.css" rel="stylesheet"/>
+<!-- JSON-LD: BreadcrumbList + Article -->
+<meta property="og:site_name" content="avis-invest.com"/><meta property="og:image:alt" content="TradingView + eToro : alertes 2025, templates prêts à…"/><meta name="twitter:url" content="https://avis-invest.com/blog-2/"/><meta name="twitter:image:alt" content="TradingView + eToro : alertes 2025, templates prêts à…"/><script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('consent', 'default', {
@@ -45,10 +41,7 @@
       'security_storage': 'granted'
     });
     window.__GA_MEASUREMENT_ID__ = 'G-GL3T4Y8WHK';
-  </script>
-
-  <!-- JSON-LD: BreadcrumbList + Article -->
-  <script type="application/ld+json">
+  </script><script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"BreadcrumbList",
@@ -58,136 +51,127 @@
       {"@type":"ListItem","position":3,"name":"TradingView + eToro : alertes 2025, templates prêts à l’emploi","item":"https://avis-invest.com/blog-2/"}
     ]
   }
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Article",
-    "headline":"TradingView + eToro : alertes 2025, templates prêts à l’emploi",
-    "description":"Configurer TradingView pour suivre vos positions eToro : alertes multi-actifs, templates, gestion du risque, bonnes pratiques.",
-    "author":{"@type":"Organization","name":"Rédaction avis-invest.com"},
-    "publisher":{
-      "@type":"Organization",
-      "name":"avis-invest.com",
-      "logo":{"@type":"ImageObject","url":"https://avis-invest.com/images/favicon.png"}
-    },
-    "image":"https://avis-invest.com/images/etoro-dashboard.png",
-    "mainEntityOfPage":"https://avis-invest.com/blog-2/",
-    "datePublished":"2025-02-15",
-    "dateModified":"2025-02-15",
-    "inLanguage":"fr",
-    "wordCount":"1200"
-  }
-  </script>
-</head>
-
+  </script><script type="application/ld+json">{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "TradingView + eToro : alertes 2025, templates prêts à l’emploi",
+  "description": "Configurer TradingView pour suivre vos positions eToro : alertes multi-actifs, templates, gestion du risque, bonnes pratiques.",
+  "author": {
+    "@type": "Organization",
+    "name": "Rédaction avis-invest.com"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "avis-invest.com",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://avis-invest.com/images/favicon.png"
+    }
+  },
+  "image": "https://avis-invest.com/images/etoro-dashboard.png",
+  "mainEntityOfPage": "https://avis-invest.com/blog-2/",
+  "datePublished": "2025-02-15",
+  "dateModified": "2025-02-15",
+  "inLanguage": "fr-FR",
+  "wordCount": "1200"
+}</script></head>
 <body>
-  <div class="risk-banner" role="note" aria-label="Avertissement sur les risques CFD">
-    <p>
+<div aria-label="Avertissement sur les risques CFD" class="risk-banner" role="note">
+<p>
       Les CFD sont des instruments complexes et comportent un risque élevé de perte rapide d'argent en raison de l'effet de levier.
-      <strong>61&nbsp;% des comptes d'investisseurs particuliers perdent de l'argent</strong> lors de la négociation de CFD avec ce fournisseur.
+      <strong>61 % des comptes d'investisseurs particuliers perdent de l'argent</strong> lors de la négociation de CFD avec ce fournisseur.
       Vous devez vous demander si vous comprenez le fonctionnement des CFD et si vous pouvez vous permettre de prendre le risque élevé de perdre votre argent.
-      <a class="risk-link" href="/sources/etoro-fr#risque" target="_blank" rel="noopener">Consulter l'avertissement de risques eToro (UE)</a>
-    </p>
-  </div>
-
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="/" class="logo" aria-label="avis-invest.com">
-        <img src="/images/favicon.png" alt="Logo avis-invest.com" width="32" height="32" decoding="async">
-        <span>avis-invest</span>
-      </a>
-
-      <nav class="main-nav" aria-label="Navigation principale">
-        <button class="burger" aria-expanded="false" aria-controls="nav-menu" aria-label="Ouvrir le menu">
-          <span></span><span></span><span></span>
-        </button>
-        <ul id="nav-menu">
-          <li><a href="/">Accueil</a></li>
-          <li><a class="active" href="/blog/">Blog</a></li>
-          <li><a href="/mentions-legales/">Mentions légales</a></li>
-          <li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container article" aria-labelledby="article-title">
-    <p class="eyebrow">Mise à jour • Février 2025</p>
-    <h1 id="article-title">TradingView + eToro : templates d’alertes prêts à cloner</h1>
-    <p class="lede">Objectif : ne plus surveiller vos positions eToro en permanence. Nous avons configuré des alertes TradingView compatibles actions, indices, ETF et crypto (selon votre pays). Vous pouvez les cloner, ajuster le risque et recevoir les signaux par app, email ou webhook.</p>
-
-    <section>
-      <h2>Pré-requis rapides</h2>
-      <ul>
-        <li>TradingView plan Pro ou supérieur pour les alertes multiples.</li>
-        <li>Horloge synchronisée et fuseau horaire correct pour éviter les alertes hors session.</li>
-        <li>Risk management : taille de position calculée avant l’ordre sur eToro (pas dans TradingView).</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Templates d’alertes à cloner</h2>
-      <ul>
-        <li><strong>Breakout + volume</strong> : prix franchit la résistance, volume > 20 % moyenne.</li>
-        <li><strong>Pullback propre</strong> : prix touche EMA20 après rupture, pas de bougie pleine contre-tendance.</li>
-        <li><strong>Trailing stop</strong> : alerte si prix casse le dernier plus bas 1H (pour resserrer le stop).</li>
-        <li><strong>Crypto (si éligible)</strong> : alerte croisement VWAP + RSI < 60 en tendance haussière.</li>
-      </ul>
-      <p>Nous avons mis en ligne ces modèles avec captures et paramètres détaillés sur <a href="https://tradingview-avis.com/" target="_blank" rel="noopener">notre guide TradingView complet</a>. Vous pouvez les dupliquer puis éditer les tickers pour vos listes.</p>
-    </section>
-
-    <section>
-      <h2>Bonnes pratiques eToro</h2>
-      <ul>
-        <li>Limiter les alertes sur les actifs réellement disponibles dans votre région (actions/ETF, crypto si autorisée).</li>
-        <li>Éviter l’effet de levier sur CFD si vous débutez ; préférer l’achat au comptant.</li>
-        <li>Renseigner une zone de prise de bénéfices et un stop technique avant d’envoyer l’ordre sur eToro.</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Checklist de mise en place</h2>
-      <ol>
-        <li>Créer une watchlist « eToro » dans TradingView.</li>
-        <li>Appliquer le template « Breakout + volume » sur vos actifs clés.</li>
-        <li>Planifier une revue hebdo : nettoyer les alertes expirées, ajuster les niveaux.</li>
-        <li>Sur eToro, utiliser la taille fractionnée (actions) ou min. crypto si dispo ; ne pas surdimensionner.</li>
-      </ol>
-    </section>
-
-    <section>
-      <h2>FAQ rapide</h2>
-      <ul>
-        <li><strong>Les alertes exécutent-elles les ordres ?</strong> Non, elles notifient seulement. Vous placez l’ordre sur eToro.</li>
-        <li><strong>Faut-il un plan payant TradingView ?</strong> Oui pour plusieurs alertes simultanées.</li>
-        <li><strong>Crypto indisponible sur eToro chez moi ?</strong> Désactivez les modèles crypto et restez sur actions/ETF.</li>
-      </ul>
-    </section>
-
-    <p class="disclaimer">
+      <a class="risk-link" href="/sources/etoro-fr#risque" rel="noopener noreferrer" target="_blank">Consulter l'avertissement de risques eToro (UE)</a>
+</p>
+</div>
+<header class="site-header">
+<div class="container header-inner">
+<a aria-label="avis-invest.com" class="logo" href="/">
+<img alt="Logo avis-invest.com" decoding="async" height="32" src="/images/favicon.png" width="32"/>
+<span>avis-invest</span>
+</a>
+<nav aria-label="Navigation principale" class="main-nav">
+<button aria-controls="nav-menu" aria-expanded="false" aria-label="Ouvrir le menu" class="burger">
+<span></span><span></span><span></span>
+</button>
+<ul id="nav-menu">
+<li><a href="/">Accueil</a></li>
+<li><a class="active" href="/blog/">Blog</a></li>
+<li><a href="/mentions-legales/">Mentions légales</a></li>
+<li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
+</ul>
+</nav>
+</div>
+</header>
+<main aria-labelledby="article-title" class="container article">
+<p class="eyebrow">Mise à jour • Février 2025</p>
+<h1 id="article-title">TradingView + eToro : templates d’alertes prêts à cloner</h1>
+<p class="lede">Objectif : ne plus surveiller vos positions eToro en permanence. Nous avons configuré des alertes TradingView compatibles actions, indices, ETF et crypto (selon votre pays). Vous pouvez les cloner, ajuster le risque et recevoir les signaux par app, email ou webhook.</p>
+<section>
+<h2>Pré-requis rapides</h2>
+<ul>
+<li>TradingView plan Pro ou supérieur pour les alertes multiples.</li>
+<li>Horloge synchronisée et fuseau horaire correct pour éviter les alertes hors session.</li>
+<li>Risk management : taille de position calculée avant l’ordre sur eToro (pas dans TradingView).</li>
+</ul>
+</section>
+<section>
+<h2>Templates d’alertes à cloner</h2>
+<ul>
+<li><strong>Breakout + volume</strong> : prix franchit la résistance, volume &gt; 20 % moyenne.</li>
+<li><strong>Pullback propre</strong> : prix touche EMA20 après rupture, pas de bougie pleine contre-tendance.</li>
+<li><strong>Trailing stop</strong> : alerte si prix casse le dernier plus bas 1H (pour resserrer le stop).</li>
+<li><strong>Crypto (si éligible)</strong> : alerte croisement VWAP + RSI &lt; 60 en tendance haussière.</li>
+</ul>
+<p>Nous avons mis en ligne ces modèles avec captures et paramètres détaillés sur <a href="https://tradingview-avis.com/" rel="noopener noreferrer" target="_blank">notre guide TradingView complet</a>. Vous pouvez les dupliquer puis éditer les tickers pour vos listes.</p>
+</section>
+<section>
+<h2>Bonnes pratiques eToro</h2>
+<ul>
+<li>Limiter les alertes sur les actifs réellement disponibles dans votre région (actions/ETF, crypto si autorisée).</li>
+<li>Éviter l’effet de levier sur CFD si vous débutez ; préférer l’achat au comptant.</li>
+<li>Renseigner une zone de prise de bénéfices et un stop technique avant d’envoyer l’ordre sur eToro.</li>
+</ul>
+</section>
+<section>
+<h2>Checklist de mise en place</h2>
+<ol>
+<li>Créer une watchlist « eToro » dans TradingView.</li>
+<li>Appliquer le template « Breakout + volume » sur vos actifs clés.</li>
+<li>Planifier une revue hebdo : nettoyer les alertes expirées, ajuster les niveaux.</li>
+<li>Sur eToro, utiliser la taille fractionnée (actions) ou min. crypto si dispo ; ne pas surdimensionner.</li>
+</ol>
+</section>
+<section>
+<h2>FAQ rapide</h2>
+<ul>
+<li><strong>Les alertes exécutent-elles les ordres ?</strong> Non, elles notifient seulement. Vous placez l’ordre sur eToro.</li>
+<li><strong>Faut-il un plan payant TradingView ?</strong> Oui pour plusieurs alertes simultanées.</li>
+<li><strong>Crypto indisponible sur eToro chez moi ?</strong> Désactivez les modèles crypto et restez sur actions/ETF.</li>
+</ul>
+</section>
+<p class="disclaimer">
       Le copytrading ou l’investissement en cryptoactifs est hautement volatil et non régulé dans certains pays de l’UE. Aucune protection consommateur. Des taxes sur les bénéfices peuvent s’appliquer. Performances passées non indicatives des résultats futurs.
     </p>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="/">Accueil</a></li>
-          <li><a href="/blog/">Blog</a></li>
-          <li><a href="/mentions-legales/">Mentions légales</a></li>
-          <li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Langue</h3>
-        <ul>
-          <li><a href="/en/blog-2/" hreflang="en">English</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+</main>
+<footer class="site-footer">
+<div class="container footer-grid">
+<div>
+<h3>Navigation</h3>
+<ul>
+<li><a href="/">Accueil</a></li>
+<li><a href="/blog/">Blog</a></li>
+<li><a href="/mentions-legales/">Mentions légales</a></li>
+<li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
+</ul>
+</div>
+<div>
+<h3>Langue</h3>
+<ul>
+<li><a href="/en/blog-2/" hreflang="en">English</a></li>
+</ul>
+</div>
+</div>
+</footer>
 </body>
 </html>
