--- a/sources/etoro-en.html
+++ b/sources/etoro-en.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="description" content="Summary of official eToro resources: risk warning, account opening, regulation, fees, conversions and withdrawals.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>eToro official references – Summary (EN)</title>
-  <meta name="robots" content="index,follow">
-  <link rel="icon" type="image/png" href="/images/favicon.png">
-  <link rel="canonical" href="https://avis-invest.com/sources/etoro-en">
-  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="fr">
-  <link rel="alternate" href="https://avis-invest.com/sources/etoro-en" hreflang="en">
-  <link rel="alternate" href="https://avis-invest.com/sources/etoro-fr" hreflang="x-default">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://avis-invest.com/sources/etoro-en">
-  <meta property="og:title" content="eToro official references – Summary (EN)">
-  <meta property="og:description" content="Official eToro references (EN): EU risk warning, account opening, regulation, fees, conversions and withdrawals.">
-  <meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png">
-  <meta property="og:image:width" content="800">
-  <meta property="og:image:height" content="400">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:locale:alternate" content="fr_FR">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="eToro official references – Summary (EN)">
-  <meta name="twitter:description" content="Official eToro references (EN): EU risk warning, regulation, fees and withdrawals.">
-  <meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png">
-
-  <link rel="stylesheet" href="/style.min.css">
-  <style>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>eToro official references – Summary (EN)</title>
+<meta name="description" content="Summary of official eToro resources: risk warning, account opening, regulation, fees, conversions and withdrawals."/>
+<meta name="robots" content="index,follow"/>
+<link href="/images/favicon.png" rel="icon" type="image/png"/>
+<link rel="canonical" href="https://avis-invest.com/sources/etoro-en"/>
+<link href="https://avis-invest.com/sources/etoro-fr" hreflang="fr" rel="alternate"/>
+<link href="https://avis-invest.com/sources/etoro-en" hreflang="en" rel="alternate"/>
+<link href="https://avis-invest.com/sources/etoro-fr" hreflang="x-default" rel="alternate"/>
+<!-- Open Graph -->
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://avis-invest.com/sources/etoro-en"/>
+<meta property="og:title" content="eToro official references – Summary (EN)"/>
+<meta property="og:description" content="Summary of official eToro resources: risk warning, account opening, regulation, fees, conversions and withdrawals."/>
+<meta property="og:image" content="https://avis-invest.com/images/etoro-dashboard.png"/>
+<meta property="og:image:width" content="800"/>
+<meta property="og:image:height" content="400"/>
+<meta property="og:locale" content="en_US"/>
+<meta property="og:locale:alternate" content="fr_FR"/>
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="eToro official references – Summary (EN)"/>
+<meta name="twitter:description" content="Summary of official eToro resources: risk warning, account opening, regulation, fees, conversions and withdrawals."/>
+<meta name="twitter:image" content="https://avis-invest.com/images/etoro-dashboard.png"/>
+<link href="/style.min.css" rel="stylesheet"/>
+<style>
     body { max-width: 960px; margin: 0 auto; padding: 32px 18px; line-height: 1.7; font-size: 1.05rem; }
     header { margin-bottom: 32px; }
     header h1 { font-size: 2rem; margin-bottom: 12px; }
@@ -42,136 +36,122 @@
     .note { font-size: 0.9rem; color: #555; }
     ul { padding-left: 22px; }
   </style>
-</head>
+<meta property="og:site_name" content="avis-invest.com"/><meta property="og:image:alt" content="eToro official references – Summary (EN)"/><meta name="twitter:url" content="https://avis-invest.com/sources/etoro-en"/><meta name="twitter:image:alt" content="eToro official references – Summary (EN)"/></head>
 <body>
-  <header>
-    <h1>eToro public documentation – key points</h1>
-    <p>
+<header>
+<h1>eToro public documentation – key points</h1>
+<p>
       This page consolidates the main facts taken from eToro's public help centre.
       Original URLs are shown as plain text so you can copy and paste them in your browser.
-      Direct outbound links are disabled to avoid the HTTP&nbsp;403 errors raised by automated SEO audits.
+      Direct outbound links are disabled to avoid the HTTP 403 errors raised by automated SEO audits.
     </p>
-    <nav class="note" aria-label="Site navigation">
-      <a href="/en/">Home</a> · <a href="/en/blog/">Blog</a> · <a href="/sources/etoro-fr" hreflang="fr">Français</a>
-    </nav>
-    <p class="note">Last verification: 31&nbsp;October&nbsp;2025.</p>
-  </header>
-
-  <main>
-    <section id="risk">
-      <h2>CFD risk warning (EU)</h2>
-      <p>
+<nav aria-label="Site navigation" class="note">
+<a href="/en/">Home</a> · <a href="/en/blog/">Blog</a> · <a href="/sources/etoro-fr" hreflang="fr">Français</a>
+</nav>
+<p class="note">Last verification: 31 October 2025.</p>
+</header>
+<main>
+<section id="risk">
+<h2>CFD risk warning (EU)</h2>
+<p>
         Trading CFDs involves leverage and a high risk of losing money rapidly. 
         61% of retail investor accounts lose money when trading CFDs with eToro Europe Ltd.
         Consider whether you understand how CFDs work and whether you can afford to take the risk of losing your money.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/How-does-eToro-calculate-and-present-risk?language=en_GB</code></p>
-    </section>
-
-    <section id="open-account">
-      <h2>Opening an eToro account</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/How-does-eToro-calculate-and-present-risk?language=en_GB</code></p>
+</section>
+<section id="open-account">
+<h2>Opening an eToro account</h2>
+<p>
         The onboarding flow includes creating a profile, completing the KYC questionnaire, submitting identity documents
         and funding the account via an accepted payment method. A virtual portfolio remains available for practice.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/how-do-i-open-an-etoro-account?language=en_GB</code></p>
-    </section>
-
-    <section id="regulation">
-      <h2>Regulation &amp; licences</h2>
-      <ul>
-        <li>eToro (Europe) Ltd – regulated by CySEC, licence 109/10.</li>
-        <li>eToro (UK) Ltd – regulated by the Financial Conduct Authority, FRN&nbsp;583263.</li>
-        <li>eToro AUS Capital Pty Ltd – regulated by ASIC, AFSL&nbsp;491139.</li>
-      </ul>
-      <p class="note"><strong>Official registers:</strong> FCA FRN&nbsp;583263 <code>https://register.fca.org.uk/s/firm?id=001b000000NMkLXAA1</code></p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/is-etoro-regulated?language=en_GB</code></p>
-    </section>
-
-    <section id="fees">
-      <h2>Trading fees &amp; commissions</h2>
-      <ul>
-        <li>Real stocks: 0% commission for long, non-leveraged positions on US equities.</li>
-        <li>CFDs: variable spreads plus overnight funding on leveraged positions.</li>
-        <li>Inactivity: 10&nbsp;USD charged after 12 months without logging in.</li>
-      </ul>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/which-fees-and-commissions-does-etoro-have?language=en_GB</code></p>
-    </section>
-
-    <section id="conversion">
-      <h2>Conversion fees</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/how-do-i-open-an-etoro-account?language=en_GB</code></p>
+</section>
+<section id="regulation">
+<h2>Regulation &amp; licences</h2>
+<ul>
+<li>eToro (Europe) Ltd – regulated by CySEC, licence 109/10.</li>
+<li>eToro (UK) Ltd – regulated by the Financial Conduct Authority, FRN 583263.</li>
+<li>eToro AUS Capital Pty Ltd – regulated by ASIC, AFSL 491139.</li>
+</ul>
+<p class="note"><strong>Official registers:</strong> FCA FRN 583263 <code>https://register.fca.org.uk/s/firm?id=001b000000NMkLXAA1</code></p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/is-etoro-regulated?language=en_GB</code></p>
+</section>
+<section id="fees">
+<h2>Trading fees &amp; commissions</h2>
+<ul>
+<li>Real stocks: 0% commission for long, non-leveraged positions on US equities.</li>
+<li>CFDs: variable spreads plus overnight funding on leveraged positions.</li>
+<li>Inactivity: 10 USD charged after 12 months without logging in.</li>
+</ul>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/which-fees-and-commissions-does-etoro-have?language=en_GB</code></p>
+</section>
+<section id="conversion">
+<h2>Conversion fees</h2>
+<p>
         Deposits and withdrawals made in a currency other than USD incur a conversion fee.
-        The fee depends on the currency pair (e.g. 50&nbsp;bps for EUR&nbsp;/&nbsp;USD).
+        The fee depends on the currency pair (e.g. 50 bps for EUR / USD).
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/does-etoro-charge-conversion-fees?language=en_GB</code></p>
-    </section>
-
-    <section id="withdrawals">
-      <h2>Withdrawal policy</h2>
-      <p>
-        Minimum withdrawal: 30&nbsp;USD. A flat 5&nbsp;USD fee applies to each request.
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/does-etoro-charge-conversion-fees?language=en_GB</code></p>
+</section>
+<section id="withdrawals">
+<h2>Withdrawal policy</h2>
+<p>
+        Minimum withdrawal: 30 USD. A flat 5 USD fee applies to each request.
         For compliance reasons, funds are usually returned to the original payment method before alternative options are offered.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/does-etoro-charge-withdrawal-fees?language=en_GB</code></p>
-    </section>
-
-    <section id="crypto-pricing">
-      <h2>Crypto pricing update (July 2025)</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/does-etoro-charge-withdrawal-fees?language=en_GB</code></p>
+</section>
+<section id="crypto-pricing">
+<h2>Crypto pricing update (July 2025)</h2>
+<p>
         eToro now labels a fixed 1% commission on crypto buy/sell orders, displayed separately from the spread.
         Spreads remain variable depending on market conditions.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/how-does-etoro-crypto-pricing-work?language=en_GB</code></p>
-    </section>
-
-    <section id="copytrader">
-      <h2>How CopyTrader™ works</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/how-does-etoro-crypto-pricing-work?language=en_GB</code></p>
+</section>
+<section id="copytrader">
+<h2>How CopyTrader™ works</h2>
+<p>
         CopyTrader™ mirrors the trades of a selected investor in real time.
-        Minimum copy amount is 200&nbsp;USD, and each copied position opens with at least 1&nbsp;USD.
+        Minimum copy amount is 200 USD, and each copied position opens with at least 1 USD.
         Copiers can pause or stop copying at any moment.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/topic/0TO08000000kXt7GAE/copytrader?language=en_GB</code></p>
-    </section>
-
-    <section id="copy-trading-risks">
-      <h2>Copy trading risks</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/topic/0TO08000000kXt7GAE/copytrader?language=en_GB</code></p>
+</section>
+<section id="copy-trading-risks">
+<h2>Copy trading risks</h2>
+<p>
         Copying successful traders does not guarantee future returns.
         Performance statistics are historical only; capital is at risk and past performance is not indicative of future results.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/Is-copy-trading-a-safer-investment-strategy?language=en_GB</code></p>
-    </section>
-
-    <section id="smart-portfolios">
-      <h2>Smart Portfolios</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/Is-copy-trading-a-safer-investment-strategy?language=en_GB</code></p>
+</section>
+<section id="smart-portfolios">
+<h2>Smart Portfolios</h2>
+<p>
         Smart Portfolios bundle assets around a theme or strategy. They are commission-free to open or close.
         Underlying market spreads still apply, and minimum investment requirements vary by portfolio.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/topic/0TO08000000kY5UGAU/smart-portfolios?language=en_GB</code></p>
-    </section>
-
-    <section id="smart-portfolio-fees">
-      <h2>Smart Portfolio fees</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/topic/0TO08000000kY5UGAU/smart-portfolios?language=en_GB</code></p>
+</section>
+<section id="smart-portfolio-fees">
+<h2>Smart Portfolio fees</h2>
+<p>
         Closing a Smart Portfolio does not trigger additional fees from eToro.
         However, overnight fees may apply to leveraged CFD positions held within portfolios that include leverage.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/Are-fees-charged-to-close-a-Smart-Portfolio?language=en_GB</code></p>
-    </section>
-
-    <section id="australia">
-      <h2>Australian resident coverage</h2>
-      <p>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/Are-fees-charged-to-close-a-Smart-Portfolio?language=en_GB</code></p>
+</section>
+<section id="australia">
+<h2>Australian resident coverage</h2>
+<p>
         Australian clients can trade ASX-listed assets through eToro AUS Capital Pty Ltd.
         Access to certain markets or asset classes can differ depending on residency and regulatory requirements.
       </p>
-      <p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/What-can-I-trade-on-eToro-as-an-Australian-resident?language=en_GB</code></p>
-    </section>
-  </main>
+<p><strong>Original URL:</strong> <code>https://help.etoro.com/s/article/What-can-I-trade-on-eToro-as-an-Australian-resident?language=en_GB</code></p>
+</section>
+</main>
 </body>
 </html>
-
-
